# camkes

apps/kitty/: CMakeLists.txt  README  kitty.camkes  settings.cmake
apps/kitty/components/client/: Cargo.toml  client.camkes
apps/kitty/components/client/src/: bindings.rs  client.c  client.rs  socket.rs  stdio.rs
apps/kitty/components/display/: display.camkes
apps/kitty/components/display/include/: bg.h  font.h  image.h  imx_regs.h  ipu_common.h  ipu_regs.h  kitty1.h  kitty2.h  kitty3.h  kitty4.h  kitty_swipe.h  logo.h  msg1.h  mxc_hdmi.h  porttype.h  porttype.idl4  vmem_layout.h
apps/kitty/components/display/src/: display.c  ipu.c  textPrint.c
apps/kitty/components/rfid/: rfid.camkes
apps/kitty/components/rfid/src/: client.c
apps/kitty/components/serial/: serial.camkes
apps/kitty/components/serial/include/: porttype.h  porttype.idl4
apps/kitty/components/serial/src/: driver.c
apps/kitty/components/timer/: timer.camkes
apps/kitty/components/timer/include/: epit.h
apps/kitty/components/timer/src/: epit.c  timer.c
apps/kitty/components/usb/: usb.camkes
apps/kitty/components/usb/src/: usb.c
apps/kitty/include/: displaysizes.h  rfid_string.h  usbregion.h  usbsizes.h  util.h
apps/kitty/interfaces/: display.idl4  rfid.idl4  serial.idl4
