# Copyright (c) 2015 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "client"
version = "0.0.1"
authors = ["Kent McLeod <kent.mcleod@nicta.com.au>", "Edward Pierzchalski <edward.pierzchalski@nicta.com.au>"]
description = "A controller for the kitty i think"

[lib]
name = "client"
path = "src/client.rs"
crate-type = ["staticlib"]

[dependencies]
sel4-sys = { version = "0.0.20" }
sel4-start = "0.0.20"
#collections = {path = "../../../../libs/libcollections"}
#alloc = {path = "../../../../libs/liballoc"}
allocator_libc = {path = "../../../../libs/liballocator_libc"}
std = {path = "../../../../libs/libstdrs"}
#sysroot = {path = "../../../../libs/libsysroot"}
